Add - Account Model

--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 # Play Web
 
-createuser provest
-createdb --encoding=UTF8 --owner=provest provest
+#Run Postgresql server on machine(Mac OS)..
+  command: pg_ctl -D /usr/local/var/postgres -l /usr/local/var/postgres/server.log start
+
+#DB useer and DB name
+  createuser provest
+  createdb --encoding=UTF8 --owner=provest provest
+
